--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cajas</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <title>Cacajas</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
+    <body>
+        <div class="caja">
+          <h2>Caja 1</h2>
+        </div>
 
-    <div id="caja1" class="caja1">Caja 1</div>
-    <div id="caja2" class="caja2">Caja 2</div>
-    <div id="caja3" class="caja3">Caja 3</div>
-    <div id="caja3" class="caja3">Caja 3</div>
-
-<body>
-    
-</body>
+        <div class="caja">
+          <h2>Caja 2</h2>
+        </div>
+      
+        <div class="caja">
+          <h2>Caja 3</h2>
+        </div>
+    </body>
 </html>
